--- a/man/ug.1
+++ b/man/ug.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "April 09, 2024" "ugrep 5.1.4" "User Commands"
+.TH UGREP "1" "May 06, 2024" "ugrep 6.0.0" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -1462,7 +1462,7 @@ Copyright (c) 2021-2024 Robert A. van Engelen <engelen@acm.org>
 \fBugrep\fR is released under the BSD\-3 license.  All parts of the software
 have reasonable copyright terms permitting free redistribution.  This includes
 the ability to reuse all or parts of the ugrep source tree.
+.SH "SEE ALSO"
+ugrep-indexer(1), grep(1), zgrep(1).
 .SH BUGS
 Report bugs at: <https://github.com/Genivia/ugrep/issues>
-.SH "SEE ALSO"
-grep(1).
